# hogan

./: .gitignore  pyproject.toml  stackramp.yaml
docs/: PRD.md
hogan/: __init__.py
hogan-rs/: Cargo.toml
hogan-rs/src/: lib.rs  main.rs  networks.rs  sampler.rs  trainer.rs  transformer.rs  types.rs
hogan/cli/: main.py
hogan/config/: defaults.yaml
hogan/core/: profiler.py  sanitiser.py  synthesiser.py  trainer.py
website/: index.html  package-lock.json  package.json  stackramp.yaml
website/src/: App.tsx  index.css
